<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="EM04_Follower3" Id="{649c12a4-874d-4d73-8db5-fadb49cbf83a}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM EM04_Follower3
VAR
	ref_Master: REFERENCE TO UDT_AXISADMIN;
	ref_Follower: REFERENCE TO UDT_AXISADMIN;
	Ref_MachineStateModel: REFERENCE TO PackMlv3_StateModel;
	Ref_Unit: REFERENCE TO UDT_UnitAdmin;
	EM_No: INT:=4;
	tonAbortingWatchDog: TON;
	tonStoppingWatchDog: Ton;
	MC_CamIn_Follower: MC_CamIn;

	MC_CamTableSelect_Follower: MC_CamTableSelect;
	CamTableFollower: MC_CAM_REF;
	table1: ARRAY[1..2] OF MC_MotionFunctionPoint; (*用于定义电子凸轮表中的关键点*)


    MC_ReadCamTableSlaveDynamicsFollwer: MC_ReadCamTableSlaveDynamics;
	
	tonFollowerSeq: TON;
	FollowerSeq: SequenceTransfer;	
	
	i: INT;
	lrPosCnt: INT;
	bRecipeComplete: BOOL;
	bBeltInRange: BOOL;
	iLastSeq: INT;
END_VAR

VAR CONSTANT
	iCamID: MC_CAM_ID:=3;		
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*减速比10/1 同步轮周长400 ，皮带总长11600，58个工位，工位间距200
28个工位后开始落料*)
Ref_MachineStateModel REF= UN01_MachineStateModel;
Ref_Unit REF=Unit01;
ref_Master REF= arVirtualAxisAdmin[1];
ref_Follower REF= arRealAxisAdmin[43];
MainRoution();
CM01_Cam();
SR999_Faulthandler();]]></ST>
    </Implementation>
    <Action Name="CM01_Cam" Id="{72b77851-d151-48c8-8aa3-67f6cd68a1dc}">
      <Implementation>
        <ST><![CDATA[//凸轮1曲线
camTableFollower.ArraySize:=SIZEOF(table1);
camTableFollower.NoOfColumns:=1;
camTableFollower.NoOfRows:=2;
camTableFollower.pArray:=ADR(table1);
camTableFollower.TableType:=MC_TABLETYPE_MOTIONFUNCTION;

table1[1].FunctionType:=MOTIONFUNCTYPE_POLYNOM1;
table1[1].MasterPos:=0;
table1[1].SlavePos:=0;
table1[1].PointIndex:=1;
table1[1].PointType:=MOTIONPOINTTYPE_MOTION;
		
table1[2].FunctionType:=MOTIONFUNCTYPE_POLYNOM1;
table1[2].MasterPos:=200;
table1[2].SlavePos:=200;
table1[2].PointIndex:=2;
table1[2].PointType:=MOTIONPOINTTYPE_MOTION;

MC_CamIn_Follower(
	Master:= ref_Master.Axis, 
	Slave:= ref_Follower.Axis, 
	Execute:= ref_Follower.i.CamIn , 
	MasterOffset:= , 
	SlaveOffset:= , 
	MasterScaling:= 1, 
	SlaveScaling:= 1, 
	StartMode:= MC_STARTMODE_ABSOLUTE, 
	CamTableID:= iCamID, 
	BufferMode:= , 
	Options:= , 
	InSync=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );
	
MC_CamTableSelect_Follower(
	Master:= ref_Master.Axis, 
	Slave:= ref_Follower.Axis, 
	CamTable:= CamTableFollower, 
	Execute:= ref_Follower.i.SelectCamTable , 
	Periodic:= TRUE, 
	MasterAbsolute:= , 
	SlaveAbsolute:= , 
	CamTableID:= iCamID, 
	Done=> ref_Follower.o.SelectCamTableDone, 
	Busy=> , 
	Error=> , 
	ErrorID=> );	
	
MC_ReadCamTableSlaveDynamicsFollwer(
	Execute:= , 
	CamTableID:=iCamID , 
	MasterPosition:=ref_Master.o.ActPos, 
	Done=> , 
	Busy=> , 
	Error=> , 
	ErrorID=> , 
	SlavePosition=> , 
	SlaveVelocity=> , 
	SlaveAcceleration=> );	]]></ST>
      </Implementation>
    </Action>
    <Action Name="CM02_Follower" Id="{a4b9b18c-3c32-48f7-ae49-cb984ac32f7f}">
      <Implementation>
        <ST><![CDATA[CASE FollowerSeq.Now OF
	0: 	   
	   IF Ref_MachineStateModel.Sts_Resetting  THEN
          FollowerSeq(ExeCute:=TRUE , Next:= Seq_Resetting);  
	   END_IF	
	
	   IF Ref_MachineStateModel.Sts_Stopping  THEN
		  FollowerSeq(ExeCute:=TRUE , Next:= Seq_Stopping);   
	   END_IF
	   IF Ref_MachineStateModel.Sts_Execute  THEN
		  FollowerSeq(ExeCute:= TRUE, Next:= 110);   
	   END_IF	   
{#region resetting}	   
	Seq_Resetting:
		IF NOT ref_Follower.o.PowerOn  THEN;
		   ref_Follower.i.Enable:=TRUE;
		ELSE
		   FollowerSeq(ExeCute:=TRUE , Next:= 20); 
		END_IF
	    IF Ref_MachineStateModel.Sts_Stopping  THEN
		   FollowerSeq(ExeCute:= TRUE, Next:= Seq_Stopping);  
	    END_IF
		
	20:	
		IF NOT glb_AllAxisHomed_UN01 THEN
			FollowerSeq(ExeCute:=TRUE , Next:= 21);  
			ELSE
			FollowerSeq(ExeCute:=TRUE , Next:= 30); 
		END_IF
	   
	21:
	   iLastSeq:=0;
	   glb_lrBelt3TargetCnt:=0;
	   glb_lrBelt3WrkCnt:=0;
	   glb_lrBelt3ValidCnt:=0;
	   bRecipeComplete:=FALSE;
	   arDropBufferCyclinder[1].i.ActiveIn:=TRUE;
	   arDropBufferCyclinder[1].i.ActiveOut:=FALSE;
	   MEMSET(destAddr:= ADR(glb_BinBelt3), fillByte:= 0, n:= SIZEOF(glb_BinBelt3));      
	   FollowerSeq(ExeCute:=TRUE , Next:= 22); 
	22:
       tonFollowerSeq(IN:=TRUE , PT:=T#1S , Q=> , ET=> );
       IF tonFollowerSeq.Q AND arDropBufferCyclinder[1].I.InSensor 
       AND arDropBufferCyclinder[2].i.InSensor THEN
		   tonFollowerSeq(IN:=FALSE , PT:=T#1S , Q=> , ET=> );
		   FollowerSeq(ExeCute:=TRUE , Next:= 23); 
       END_IF 
	   
	23:
	   ref_Follower.i.Home:=TRUE;
	   IF ref_Follower.o.HomeDone THEN
		   ref_Follower.i.Home:=FALSE;
		   FollowerSeq(ExeCute:=TRUE , Next:= 24); 
	   ELSE IF Ref_MachineStateModel.Sts_Stopping  THEN
		       ref_Follower.i.Home:=FALSE;
			   ref_Follower.i.Stop:=TRUE;
               FollowerSeq(ExeCute:=TRUE , Next:= Seq_Stopping);   
	        END_IF	   
	   END_IF	
		
    24: 
		glb_BinBelt3.bin[1].arDrop[HMI_B3DropBinNo1]:=TRUE;
		glb_BinBelt3.bin[1].arDrop[HMI_B3DropBinNo2]:=TRUE;
		glb_BinBelt3.bin[1].arDrop[HMI_B3DropBinNo3]:=TRUE;
        lrPosCnt:=1;
		ref_Follower.i.Pos:=0;		
		FollowerSeq(ExeCute:=TRUE , Next:= 25);
		
	25:
        IF ref_Follower.o.StandStill THEN
		   FollowerSeq(Execute:= TRUE, Next:= 30);   
	    END_IF
		
    30:	//生产复位
	    ref_Follower.i.MoveAbs:=TRUE; 	
    	IF  ref_Follower.o.CmdDone THEN
		    ref_Follower.i.MoveAbs:=FALSE;
            FollowerSeq(Execute:= TRUE, Next:= Seq_ResettingDone);    	
		END_IF

		
   	Seq_ResettingDone: 
         IF NOT Ref_MachineStateModel.Sts_Resetting THEN
			FollowerSeq(ExeCute:=TRUE , Next:= 0); 	
		 END_IF	   
{end_region}
	
    //自动运行
    110:
        IF iLastSeq>100 THEN
	       FollowerSeq(ExeCute:=TRUE , Next:= iLastSeq);
        ELSE 
		   FollowerSeq(ExeCute:=TRUE , Next:= 111);
		END_IF
    111: 
        IF glb_BinBelt1.bin[HMI_B1DropBinNo].arDrop[HMI_B1DropBinNo] THEN //等待皮带1倒药
		   FollowerSeq(ExeCute:=TRUE , Next:= 112);
		END_IF
		
		IF NOT glb_BinBelt1.bin[HMI_B1DropBinNo].arDrop[HMI_B1DropBinNo] 
		   AND glb_lrBelt3ValidCnt > 0  THEN // AND glb_lrBelt1WrkCnt=0 
			FollowerSeq(ExeCute:=TRUE , Next:= 120);
		END_IF
		
		IF Ref_MachineStateModel.Sts_Stopping  THEN
			FollowerSeq(ExeCute:=TRUE , Next:= Seq_Stopping);   
		END_IF   		
    112:
		   glb_BinBelt3.bin[1].arDrop[HMI_B3DropBinNo1]:=TRUE;
//		   glb_BinBelt3.bin[1].arDrop[HMI_B3DropBinNo2]:=FALSE;
//		   glb_BinBelt3.bin[1].arDrop[HMI_B3DropBinNo3]:=FALSE; 
           FollowerSeq(ExeCute:=TRUE , Next:= 120); 	
    120:  
	      IF NOT glb_BinBelt3.bin[HMI_B3DropBinNo1].arDrop[HMI_B3DropBinNo1] 
          AND NOT glb_BinBelt3.bin[HMI_B3DropBinNo2].arDrop[HMI_B3DropBinNo2] THEN 
              FollowerSeq(ExeCute:=TRUE , Next:= 121); 	
		  END_IF
		  IF Ref_MachineStateModel.Sts_Stopping  THEN
		     FollowerSeq(ExeCute:=TRUE , Next:= Seq_Stopping);   
	      END_IF
		  
    121: 
         IF NOT glb_BinBelt3.bin[HMI_B3DropBinNo3].arDrop[HMI_B3DropBinNo3] THEN
             FollowerSeq(ExeCute:=TRUE , Next:= 130); 	
	     ELSE 
		     FollowerSeq(ExeCute:=TRUE , Next:= 200); //往皮带4倒药	
         END_IF
	130:  
	      ref_Follower.i.Pos:=ref_Follower.i.Pos+200;
	      FollowerSeq(ExeCute:=TRUE ,Hold:=FALSE, Next:= 150);
	
	150:
	      ref_Follower.i.MoveAbs:=TRUE;
		  IF ref_Follower.o.CmdDone THEN
			 ref_Follower.i.MoveAbs:=FALSE;
			 FollowerSeq(ExeCute:=TRUE ,Hold:=FALSE, Next:= 300);
		  END_IF
	
	//往皮带4落料
	200:
	     IF glb_BinBelt4_5.bin[1].arDrop[1] THEN
			FollowerSeq(ExeCute:=TRUE , Next:= 210); 
		 END_IF
		 IF Ref_MachineStateModel.Sts_Stopping  THEN
		    FollowerSeq(ExeCute:=TRUE , Next:= Seq_Stopping);   
	     END_IF
	
	210:
		ref_Follower.i.Pos:=ref_Follower.i.Pos+200;
		FollowerSeq(ExeCute:=TRUE ,Hold:=FALSE, Next:= 220);
	
	220:
	      ref_Follower.i.MoveAbs:=TRUE;
		  IF ref_Follower.o.CmdDone THEN
			 ref_Follower.i.MoveAbs:=FALSE;
			 FollowerSeq(ExeCute:=TRUE ,Hold:=FALSE, Next:= 230);
		  END_IF	
		  IF (ref_Follower.i.Pos-ref_Follower.o.ActPos) < 60 AND NOT bBeltInRange THEN
				glb_BinBelt4_5.bin[1].arDrop[1]:=FALSE;
				glb_BinBelt4_5.bin[1].Name:= glb_BinBelt3.bin[HMI_B3DropBinNo3].Name;
				glb_BinBelt4_5.bin[1].Amount:= glb_BinBelt3.bin[HMI_B3DropBinNo3].Amount;
				glb_BinBelt4_5.bin[1].bReject:= glb_BinBelt3.bin[HMI_B3DropBinNo3].bReject;
				glb_lrBelt3ValidCnt:=glb_lrBelt3ValidCnt-1;
			  bBeltInRange:=TRUE;
		  END_IF 
	
	230:  
	      bBeltInRange:=FALSE;
		  glb_BinBelt3.bin[HMI_B3DropBinNo3].arDrop[HMI_B3DropBinNo3]:=FALSE;
		  FollowerSeq(ExeCute:=TRUE ,Hold:=FALSE, Next:= 300); 
		  
    300: 
	
			FOR i:=64 TO 1 BY -1 DO
				glb_BinBelt3.bin[i]:= glb_BinBelt3.bin[i-1];  
			END_FOR	     
			glb_BinBelt3.bin[1].arDrop[HMI_B3DropBinNo1]:=FALSE;
			glb_BinBelt3.bin[1].arDrop[HMI_B3DropBinNo2]:=FALSE;
			glb_BinBelt3.bin[1].arDrop[HMI_B3DropBinNo3]:=FALSE;
			glb_lrBelt3WrkCnt:=glb_lrBelt3WrkCnt+1;
			FollowerSeq(ExeCute:=TRUE ,Hold:=FALSE, Next:= 111);  

			
		  
	Seq_Stopping: 
        iLastSeq:= FollowerSeq.Last; 
	    tonFollowerSeq(IN:=TRUE , PT:=T#1S , Q=> , ET=> );
		IF tonFollowerSeq.Q THEN
			tonFollowerSeq(IN:=FALSE , PT:=T#1S , Q=> , ET=> );
			FollowerSeq(ExeCute:=TRUE , Next:= Seq_StoppingDone); 
		END_IF
		
	Seq_StoppingDone:
	     ref_Follower.i.Disable:=TRUE;
		 IF NOT Ref_MachineStateModel.Sts_Stopping THEN
			FollowerSeq(ExeCute:=TRUE , Next:= 0); 
		 END_IF
END_CASE
FollowerSeq.Hold := Ref_MachineStateModel.Sts_Held;]]></ST>
      </Implementation>
    </Action>
    <Action Name="MainRoution" Id="{45c00345-45dd-4368-8aeb-216ef3a4244b}">
      <Implementation>
        <ST><![CDATA[EM_No:=4;
IF Ref_Unit.EM_Selected[EM_No] THEN
	IF Ref_MachineStateModel.Sts_Holding THEN
		Ref_Unit.EM_Holding_Done[EM_No]:=TRUE;
		ELSE
		Ref_Unit.EM_Holding_Done[EM_No]:=FALSE;
	END_IF
	IF Ref_MachineStateModel.Sts_UnHolding THEN
		Ref_Unit.EM_UnHolding_Done[EM_No]:=TRUE;
		ELSE
		Ref_Unit.EM_UnHolding_Done[EM_No]:=FALSE;
	END_IF
	
	IF Ref_MachineStateModel.Sts_Suspending THEN
		Ref_Unit.EM_Suspending_Done[EM_No]:=TRUE;
		ELSE
		Ref_Unit.EM_Suspending_Done[EM_No]:=FALSE;
	END_IF
	
	IF Ref_MachineStateModel.Sts_UnSuspending THEN
		Ref_Unit.EM_UnSuspending_Done[EM_No]:=TRUE;
		ELSE
		Ref_Unit.EM_UnSuspending_Done[EM_No]:=FALSE;
	END_IF
	
	IF Ref_MachineStateModel.Sts_Resetting AND FollowerSeq.Now=Seq_ResettingDone THEN
	   Ref_Unit.EM_Resetting_Done[EM_No]:=TRUE;
       ELSE   
	   Ref_Unit.EM_Resetting_Done[EM_No]:=FALSE;
	END_IF
	
	IF Ref_MachineStateModel.Sts_Clearing THEN
	   Ref_Unit.EM_Clearing_Done[EM_No]:=TRUE;
	   ELSE
	   Ref_Unit.EM_Clearing_Done[EM_No]:=FALSE;
	END_IF
	
	IF Ref_MachineStateModel.Sts_Starting THEN
	   Ref_Unit.EM_Starting_Done[EM_No]:=TRUE;
	   ELSE
       Ref_Unit.EM_Starting_Done[EM_No]:=FALSE;
	END_IF
	
	IF Ref_MachineStateModel.Sts_Stopping AND FollowerSeq.Now=Seq_StoppingDone  THEN
	   Ref_Unit.EM_Stopping_Done[EM_No]:=TRUE;	
       ELSE  
	   Ref_Unit.EM_Stopping_Done[EM_No]:=FALSE;	
	END_IF

	IF Ref_MachineStateModel.Sts_Aborting THEN
	    FollowerSeq(ExeCute:=TRUE , Next:= 0);	
		IF ref_Follower.o.InSync THEN	 
		   ref_Follower.i.CamOut:=TRUE;
		ELSE IF  NOT ref_Follower.o.StandStill THEN
				ref_follower.i.Stop:=TRUE;
			END_IF
		END_IF  
		
		IF tonAbortingWatchDog.Q THEN 
			Ref_Unit.EM_Aborting_Done[EM_No]:=TRUE;
			ref_Follower.i.Disable:=TRUE;
        END_IF
    ELSE
		Ref_Unit.EM_Aborting_Done[EM_No]:=FALSE;
	END_IF
	
	tonAbortingWatchDog(IN:= Ref_MachineStateModel.Sts_Aborting, PT:=T#3S , Q=> , ET=> );
	CM02_Follower();
ELSE
FollowerSeq(ExeCute:=TRUE , Next:= 0); 			
END_IF]]></ST>
      </Implementation>
    </Action>
    <Action Name="SR999_FaultHandler" Id="{e1a75517-513f-479f-a1a4-c8f363ed63c7}">
      <Implementation>
        <ST><![CDATA[;]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="EM04_Follower3">
      <LineId Id="578" Count="1" />
      <LineId Id="65" Count="0" />
      <LineId Id="547" Count="0" />
      <LineId Id="484" Count="0" />
      <LineId Id="482" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="516" Count="0" />
      <LineId Id="129" Count="0" />
    </LineIds>
    <LineIds Name="EM04_Follower3.CM01_Cam">
      <LineId Id="44" Count="16" />
      <LineId Id="42" Count="1" />
      <LineId Id="2" Count="16" />
      <LineId Id="1" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="30" Count="11" />
      <LineId Id="29" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="64" Count="9" />
      <LineId Id="63" Count="0" />
    </LineIds>
    <LineIds Name="EM04_Follower3.CM02_Follower">
      <LineId Id="646" Count="22" />
      <LineId Id="671" Count="7" />
      <LineId Id="980" Count="0" />
      <LineId Id="906" Count="0" />
      <LineId Id="895" Count="0" />
      <LineId Id="956" Count="0" />
      <LineId Id="892" Count="0" />
      <LineId Id="995" Count="1" />
      <LineId Id="850" Count="1" />
      <LineId Id="844" Count="0" />
      <LineId Id="680" Count="1" />
      <LineId Id="997" Count="0" />
      <LineId Id="682" Count="0" />
      <LineId Id="685" Count="1" />
      <LineId Id="852" Count="0" />
      <LineId Id="687" Count="0" />
      <LineId Id="853" Count="0" />
      <LineId Id="688" Count="4" />
      <LineId Id="855" Count="0" />
      <LineId Id="693" Count="2" />
      <LineId Id="700" Count="1" />
      <LineId Id="842" Count="1" />
      <LineId Id="704" Count="11" />
      <LineId Id="719" Count="3" />
      <LineId Id="854" Count="0" />
      <LineId Id="723" Count="5" />
      <LineId Id="896" Count="0" />
      <LineId Id="729" Count="1" />
      <LineId Id="982" Count="1" />
      <LineId Id="986" Count="0" />
      <LineId Id="985" Count="0" />
      <LineId Id="984" Count="0" />
      <LineId Id="981" Count="0" />
      <LineId Id="918" Count="0" />
      <LineId Id="925" Count="0" />
      <LineId Id="928" Count="0" />
      <LineId Id="951" Count="0" />
      <LineId Id="961" Count="2" />
      <LineId Id="933" Count="0" />
      <LineId Id="948" Count="0" />
      <LineId Id="946" Count="1" />
      <LineId Id="945" Count="0" />
      <LineId Id="910" Count="0" />
      <LineId Id="989" Count="1" />
      <LineId Id="988" Count="0" />
      <LineId Id="991" Count="0" />
      <LineId Id="733" Count="0" />
      <LineId Id="737" Count="0" />
      <LineId Id="829" Count="0" />
      <LineId Id="738" Count="0" />
      <LineId Id="742" Count="3" />
      <LineId Id="992" Count="0" />
      <LineId Id="748" Count="0" />
      <LineId Id="867" Count="0" />
      <LineId Id="864" Count="0" />
      <LineId Id="861" Count="0" />
      <LineId Id="865" Count="0" />
      <LineId Id="862" Count="0" />
      <LineId Id="749" Count="29" />
      <LineId Id="973" Count="1" />
      <LineId Id="978" Count="0" />
      <LineId Id="977" Count="0" />
      <LineId Id="994" Count="0" />
      <LineId Id="976" Count="0" />
      <LineId Id="975" Count="0" />
      <LineId Id="972" Count="0" />
      <LineId Id="779" Count="5" />
      <LineId Id="936" Count="0" />
      <LineId Id="970" Count="0" />
      <LineId Id="941" Count="1" />
      <LineId Id="938" Count="2" />
      <LineId Id="937" Count="0" />
      <LineId Id="971" Count="0" />
      <LineId Id="934" Count="0" />
      <LineId Id="964" Count="0" />
      <LineId Id="871" Count="0" />
      <LineId Id="814" Count="1" />
      <LineId Id="993" Count="0" />
      <LineId Id="816" Count="5" />
      <LineId Id="823" Count="4" />
      <LineId Id="1" Count="0" />
      <LineId Id="907" Count="0" />
    </LineIds>
    <LineIds Name="EM04_Follower3.MainRoution">
      <LineId Id="1" Count="0" />
      <LineId Id="83" Count="0" />
      <LineId Id="2" Count="0" />
      <LineId Id="75" Count="1" />
      <LineId Id="7" Count="0" />
      <LineId Id="4" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="73" Count="1" />
      <LineId Id="12" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="14" Count="1" />
      <LineId Id="71" Count="1" />
      <LineId Id="18" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="20" Count="1" />
      <LineId Id="69" Count="1" />
      <LineId Id="24" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="26" Count="1" />
      <LineId Id="30" Count="0" />
      <LineId Id="93" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="32" Count="1" />
      <LineId Id="36" Count="0" />
      <LineId Id="101" Count="1" />
      <LineId Id="31" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="98" Count="0" />
      <LineId Id="96" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="91" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="141" Count="0" />
      <LineId Id="140" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="123" Count="5" />
      <LineId Id="147" Count="0" />
      <LineId Id="149" Count="0" />
      <LineId Id="148" Count="0" />
      <LineId Id="129" Count="9" />
      <LineId Id="150" Count="1" />
      <LineId Id="92" Count="0" />
      <LineId Id="84" Count="0" />
    </LineIds>
    <LineIds Name="EM04_Follower3.SR999_FaultHandler">
      <LineId Id="1" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>